--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header>
         <nav>
-            <div class="logo">Fikri Haikal</div>
+            <a href="#hero" class="logo">Fikri Haikal</a>
             <div id="hamburger-menu">
                 <div class="line1"></div>
                 <div class="line2"></div>
