Finalizing contact section and responsive adjustments

--- a/index.html
+++ b/index.html
@@ -283,16 +283,23 @@
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3>1st Place in National Web Design Competition</h3>
-                        <span class="date">2024</span>
-                        <p>Won first place in a prestigious national competition by designing and developing a fully functional e-commerce website from scratch.</p>
+                        <h3>Finalist UI/UX Tingkat Nasional</h3>
+                        <span class="date">Juni 2025</span>
+                        <p>Meraih status finalis dalam kompetisi desain UI/UX tingkat nasional yang kompetitif.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3>Finalist in University Hackathon</h3>
-                        <span class="date">2023</span>
-                        <p>Reached the final round by creating an innovative mobile application prototype that solves a local community problem within 24 hours.</p>
+                        <h3>Finalist UI/UX Tingkat Nasional</h3>
+                        <span class="date">Februari 2025</span>
+                        <p>Diakui sebagai finalis untuk proyek UI/UX yang inovatif dan berpusat pada pengguna.</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Juara 3 UI/UX Tingkat Nasional</h3>
+                        <span class="date">Desember 2024</span>
+                        <p>Mengamankan juara ketiga melawan pesaing nasional dengan desain UI/UX yang diteliti dengan baik dan menarik secara visual.</p>
                     </div>
                 </div>
             </div>
@@ -305,18 +312,58 @@
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3>Head of IT Division</h3>
-                        <span class="date">2023 - Present</span>
-                        <h4>University Tech Club</h4>
-                        <p>Leading a team of 10 to manage the club's website, organize coding workshops, and develop internal software projects.</p>
+                        <h3>Staff Divisi Acara Diary-IS</h3>
+                        <span class="date">Desember 2023 - Februari 2024</span>
+                        <h4>Acara Prodi Sistem Informasi</h4>
+                        <p>Terlibat dalam perencanaan dan pelaksanaan acara tahunan program studi Sistem Informasi.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3>Staff of Creative Design</h3>
-                        <span class="date">2022 - 2023</span>
-                        <h4>Student Executive Board</h4>
-                        <p>Responsible for creating all visual branding and promotional materials for major university events, including posters, banners, and social media content.</p>
+                        <h3>Staff Divisi Dana Usaha In-Syncro</h3>
+                        <span class="date">Maret - Mei 2024</span>
+                        <h4>Acara Prodi Sistem Informasi</h4>
+                        <p>Bertanggung jawab dalam kegiatan penggalangan dana untuk mendukung acara program studi.</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Volunteer Staff Divisi Acara PESONA</h3>
+                        <span class="date">Desember 2023 - Juni 2024</span>
+                        <h4>Kegiatan Pengabdian Masyarakat</h4>
+                        <p>Berpartisipasi dalam kegiatan pengabdian masyarakat membersihkan sampah di pantai.</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Staff Magang Dept. PSDM Kabinet Synergia</h3>
+                        <span class="date">April - Juni 2024</span>
+                        <h4>Himpunan Mahasiswa Sistem Informasi (HMSI) ITK</h4>
+                        <p>Menjalani magang di departemen Pengembangan Sumber Daya Mahasiswa (PSDM).</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Staff Department PSDM</h3>
+                        <span class="date">Juli 2024 - Juni 2025</span>
+                        <h4>Himpunan Mahasiswa Sistem Informasi (HMSI) ITK</h4>
+                        <p>Melanjutkan peran sebagai staff di departemen Pengembangan Sumber Daya Mahasiswa.</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Ketua Panitia Studi Ekskursi Sistem Informasi</h3>
+                        <span class="date">Oktober 2024 - Juni 2025</span>
+                        <h4>Program Studi Sistem Informasi ITK</h4>
+                        <p>Memimpin seluruh kepanitiaan untuk menyukseskan acara studi ekskursi mahasiswa.</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Head of External Relationship Department</h3>
+                        <span class="date">Desember 2024 - Desember 2025</span>
+                        <h4>Institute of Electrical and Electronics Engineers (IEEE)</h4>
+                        <p>Menjabat sebagai kepala departemen yang mengelola hubungan eksternal dengan pihak luar.</p>
                     </div>
                 </div>
             </div>
@@ -327,15 +374,54 @@
         <div class="container">
             <h2>Certifications</h2>
             <div class="project-grid">
-                <div class="project-card glass-card">
-                    <h3>Certified Web Developer</h3>
-                    <span class="date">2024</span>
-                    <p>Issued by a well-known authority, validating expertise in modern web development practices.</p>
+                <!-- Certification 1: MTCNA -->
+                <div class="project-card glass-card anim-rise">
+                    <img src="assets/certification/mtcna.png" alt="MTCNA Certificate" class="cert-image">
+                    <h3>MTCNA - MikroTik Certified</h3>
+                    <p>Memvalidasi pemahaman fundamental tentang RouterOS untuk konfigurasi dan troubleshooting dasar perangkat MikroTik.</p>
+                    <a href="https://drive.google.com/file/d/1xpvV4r73X-GhksLWZxs_Z0bD54rFZ0SY/view?usp=drive_link" class="btn cert-btn" target="_blank">View Certificate</a>
                 </div>
-                <div class="project-card glass-card">
-                    <h3>Agile Foundations</h3>
-                    <span class="date">2023</span>
-                    <p>Certified in Agile methodologies, demonstrating proficiency in iterative development and project management.</p>
+                <!-- Certification 2: MTCRE -->
+                <div class="project-card glass-card anim-rise">
+                    <img src="assets/certification/mtcre.png" alt="MTCRE Certificate" class="cert-image">
+                    <h3>MTCRE - MikroTik Certified</h3>
+                    <p>Sertifikasi tingkat lanjut yang berfokus pada routing statis & dinamis (OSPF), VPN, dan kebijakan routing di RouterOS.</p>
+                    <a href="https://drive.google.com/file/d/1yiYk2RC22Ho76aZVrnQqWmks1Rj0P8ml/view?usp=sharing" class="btn cert-btn" target="_blank">View Certificate</a>
+                </div>
+                <!-- Certification 3: Cyber Security -->
+                <div class="project-card glass-card anim-rise">
+                    <img src="assets/certification/cyber.png" alt="Cyber Security Certificate" class="cert-image">
+                    <h3>Cyber Security</h3>
+                    <p>Membuktikan pengetahuan tentang prinsip keamanan siber, identifikasi ancaman, dan praktik terbaik perlindungan data.</p>
+                    <a href="https://drive.google.com/file/d/1tWTb2Diz3D3VzPSVykhfB6hw8VAPH_A1/view?usp=sharing" class="btn cert-btn" target="_blank">View Certificate</a>
+                </div>
+                <!-- Certification 4: Network Computer -->
+                <div class="project-card glass-card anim-rise">
+                    <img src="assets/certification/network.png" alt="Network Computer Certificate" class="cert-image">
+                    <h3>Network Computer</h3>
+                    <p>Mencakup konsep dasar jaringan komputer, termasuk model OSI, topologi, perangkat keras, dan protokol jaringan.</p>
+                    <a href="https://drive.google.com/file/d/1r6zIpldR4pdcuOcOhNVrT8ljDMgWuGxW/view?usp=sharing" class="btn cert-btn" target="_blank">View Certificate</a>
+                </div>
+                <!-- Certification 5: Query SQL -->
+                <div class="project-card glass-card anim-rise">
+                    <img src="assets/certification/querysql.png" alt="SQL Certificate" class="cert-image">
+                    <h3>Query SQL</h3>
+                    <p>Menunjukkan kemahiran menggunakan SQL untuk mengelola dan mengambil data dari database relasional.</p>
+                    <a href="https://drive.google.com/file/d/1NwBEBlkLdHHqXSGjZ2WvfY0U4uSRMiAN/view?usp=sharing" class="btn cert-btn" target="_blank">View Certificate</a>
+                </div>
+                <!-- Certification 6: Web Programming -->
+                <div class="project-card glass-card anim-rise">
+                    <img src="assets/certification/proweb.png" alt="Web Programming Certificate" class="cert-image">
+                    <h3>Web Programming Dasar</h3>
+                    <p>Memvalidasi keterampilan dasar pengembangan web menggunakan HTML, CSS, dan JavaScript.</p>
+                    <a href="https://drive.google.com/file/d/1bI0uWM4A2UrkJTHV3RVPPB22QtvJwVN7/view?usp=sharing" class="btn cert-btn" target="_blank">View Certificate</a>
+                </div>
+                <!-- Certification 7: JavaScript -->
+                <div class="project-card glass-card anim-rise">
+                    <img src="assets/certification/javascript.png" alt="JavaScript Certificate" class="cert-image">
+                    <h3>JavaScript Programming</h3>
+                    <p>Mengakui keahlian dalam JavaScript, termasuk manipulasi DOM dan pemrograman asinkron.</p>
+                    <a href="https://drive.google.com/file/d/1PFJTyNGe2TySeB2mzTLrTWOwBKlntOyr/view?usp=sharing" class="btn cert-btn" target="_blank">View Certificate</a>
                 </div>
             </div>
         </div>
@@ -344,21 +430,52 @@
     <section id="contact" class="reveal">
         <div class="container">
             <h2>Contact Me</h2>
-            <form id="contact-form">
-                <div class="input-group">
-                    <i class="fas fa-user"></i>
-                    <input type="text" name="name" placeholder="Your Name" required>
+            <p class="section-subtitle">I'm open to discussing new projects, creative ideas, or opportunities to be part of your vision. Feel free to reach out!</p>
+            <div class="contact-wrapper">
+                <div class="contact-info">
+                    <h3>Get in Touch</h3>
+                    <div class="contact-item">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <div>
+                            <strong>Address:</strong>
+                            <span>Jl. Soekarno-Hatta KM 15, Karang Joang, Balikpapan Utara, Indonesia</span>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fab fa-whatsapp"></i>
+                        <div>
+                            <strong>WhatsApp:</strong>
+                            <a href="https://wa.me/6285249678700" target="_blank">+62 852-4967-8700</a>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-envelope"></i>
+                        <div>
+                            <strong>Email:</strong>
+                            <a href="mailto:haikalariadma07@gmail.com">haikalariadma07@gmail.com</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="input-group">
-                    <i class="fas fa-envelope"></i>
-                    <input type="email" name="email" placeholder="Your Email" required>
+                <div class="contact-form-wrapper">
+                    <h3>Send a Message</h3>
+                    <form id="contact-form" action="https://formspree.io/f/xgvyjzqo" method="POST">
+                        <div class="input-group">
+                            <i class="fas fa-user"></i>
+                            <input type="text" name="name" placeholder="Your Name" required>
+                        </div>
+                        <div class="input-group">
+                            <i class="fas fa-envelope"></i>
+                            <input type="email" name="email" placeholder="Your Email" required>
+                        </div>
+                        <div class="input-group">
+                            <i class="fas fa-comment-dots"></i>
+                            <textarea name="message" placeholder="Your Message" required></textarea>
+                        </div>
+                        <button type="submit" class="btn">Send Message</button>
+                        <p id="form-status"></p>
+                    </form>
                 </div>
-                <div class="input-group">
-                    <i class="fas fa-comment-dots"></i>
-                    <textarea name="message" placeholder="Your Message" required></textarea>
-                </div>
-                <button type="submit" class="btn">Send Message</button>
-            </form>
+            </div>
         </div>
     </section>
 
