--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <img src="assets/aboutme.jpg" alt="Fikri Haikal" class="anim-fade-in">
-                <p class="anim-rise-from-bottom">Mahasiswa aktif semester 5 di Institut Teknologi Kalimantan (ITK) dengan IPK 3.58. Berasal dari Samarinda, Kalimantan Timur, saya memiliki minat mendalam dan keahlian di bidang <strong>pemrograman dan jaringan</strong>. Selain itu, saya juga aktif terlibat dalam berbagai organisasi dan kegiatan sukarela, yang telah mengasah kemampuan kolaborasi, inisiatif, dan adaptasi saya.</p>
+                <p class="anim-rise-from-bottom">Mahasiswa aktif semester 5 di Institut Teknologi Kalimantan (ITK) dengan IPK 3.58. Berasal dari Samarinda, Kalimantan Timur. Saya memiliki minat mendalam dan keahlian di bidang <strong>pemrograman dan jaringan</strong>. Selain itu, saya juga aktif terlibat dalam berbagai organisasi dan kegiatan sukarela, yang telah mengasah kemampuan kolaborasi, inisiatif, dan adaptasi saya.</p>
             </div>
 
             <div class="skills-section">
@@ -150,18 +150,19 @@
                 <!-- Project 2: Calactus -->
                 <div class="project-card anim-rise"
                      data-title="Calactus"
-                     data-description="A responsive and interactive e-commerce website for selling various types of cacti. Features include a product catalog, shopping cart, and a clean user interface."
+                     data-description="Calactus adalah game web 'Whack-a-mole' modern yang dikembangkan dengan HTML5, CSS3, dan JavaScript vanilla. Game ini mengusung desain gradient hitam elegan dengan fitur lengkap meliputi mode Single Player dan Multiplayer, sistem scoring (+10 poin tikus jahat, game over jika memukul tikus baik), popup Settings dan panduan bermain, serta keyboard shortcuts. Keunggulan utamanya adalah didukung aset multimedia berkualitas untuk pengalaman bermain yang engaging dan accessible. <br><br><strong>Kompatibilitas:</strong> Game ini dioptimalkan untuk perangkat laptop/PC dan membutuhkan mouse untuk gameplay yang optimal."
                      data-tools="html,css,javascript">
                     <i class="fas fa-info-circle project-info-icon"></i>
                     <div class="project-header">
-                        <h3>Calactus</h3>
+                        <h3>Calaktus</h3>
                     </div>
                     <div class="project-image-placeholder">
-                        <img src="assets/aboutme.jpg" alt="Calactus Project Thumbnail">
+                        <img src="assets/project/calactus.png" alt="Calactus Project Thumbnail">
                     </div>
-                    <p>A responsive and interactive e-commerce website for selling various types of cacti.</p>
+                    <p>Game web "Whack-a-mole" modern dengan desain gradient hitam elegan dan fitur multiplayer.</p>
+                    <p><small><strong>Note:</strong> Kompatibel hanya untuk perangkat laptop/PC</small></p>
                     <div class="project-footer">
-                        <a href="#" class="btn">View Project</a>
+                        <a href="https://notyourkise.github.io/Calactus/" class="btn">View Project</a>
                         <span class="status-badge status-online" title="This project is live."><i class="fas fa-check-circle"></i> Online</span>
                     </div>
                 </div>
@@ -332,6 +333,14 @@
                         <span class="date">Desember 2023 - Juni 2024</span>
                         <h4>Kegiatan Pengabdian Masyarakat</h4>
                         <p>Berpartisipasi dalam kegiatan pengabdian masyarakat membersihkan sampah di pantai.</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Staff Divisi Acara INSPACE</h3>
+                        <span class="date">Desember 2023 - Agustus 2024</span>
+                        <h4>Acara Terbesar Tahunan Prodi Sistem Informasi</h4>
+                        <p>Terlibat dalam perencanaan dan pelaksanaan acara terbesar tahunan milik program studi Sistem Informasi yang dinaungi langsung oleh HMSI dan dosen. Pada tahun 2024, INSPACE berbentuk talkshow dan mengundang Andovi da Lopez sebagai narasumber.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
