--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <p>I'm a <span id="typing-text"></span></p>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn">View My Work</a>
-                    <a href="assets/cv-fikri-haikal.pdf" class="btn btn-secondary" download>Download CV</a>
+                    <a href="assets/hero/CV-ATS-Muhammad Fikri Haikal Ariadma.pdf" class="btn btn-secondary" download>Download CV</a>
                 </div>
                 <div class="hero-social-links">
                     <a href="https://github.com/notyourkise?tab=repositories" aria-label="GitHub" target="_blank"><i class="fab fa-github"></i></a>
@@ -266,7 +266,7 @@
                         <h3>IT Support</h3>
                     </div>
                     <div class="project-image-placeholder">
-                        <img src="assets/aboutme.jpg" alt="IT Support Thumbnail">
+                        <img src="assets/project/IT-SUPPORT.jpg" alt="IT Support Thumbnail">
                     </div>
                     <p>Providing technical assistance, including CCTV and printer installation, PC setup, and network configuration.</p>
                     <div class="project-footer">
