--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3>Staff Department PSDM</h3>
+                        <h3>Staff Department PSDM Kabinet Istanava</h3>
                         <span class="date">Juli 2024 - Juni 2025</span>
                         <h4>Himpunan Mahasiswa Sistem Informasi (HMSI) ITK</h4>
                         <p>Melanjutkan peran sebagai staff di departemen Pengembangan Sumber Daya Mahasiswa.</p>
